Add PUT for authors and books
